--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,4 +4,5 @@ description: Finding Method in DynastyFF Madness
 show_downloads: false
 theme: jekyll-theme-cayman
 markdown: kramdown
+google_analytics: UA-36766776-4
 
