--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,6 +3,5 @@ title: DynastyProcess.com
 description: Finding Method in DynastyFF Madness
 show_downloads: false
 theme: jekyll-theme-cayman
-markdown: kramdown
 google_analytics: UA-36766776-4
-
+repository: tanho63/dynastyprocess
