--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,4 +5,6 @@ show_downloads: false
 theme: jekyll-theme-cayman
 google_analytics: UA-36766776-4
 repository: tanho63/dynastyprocess
-
+permalink: /:categories/:title/
+plugins:
+  - jemoji
