--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,3 +8,13 @@ repository: tanho63/dynastyprocess
 permalink: /:categories/:title/
 plugins:
   - jemoji
+  - jekyll-feed
+authors:
+  tan:
+    name: Tan Ho
+    display_name: Tan Ho
+    gravatar: 6683ca789ddebb86db7de22acba54094
+    email: tan@dynastyprocess.com
+    web: http://www.twitter.com/_TanHo
+    twitter: _TanHo
+    github: tanho63
