send up new fpscrape data

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 */ideas.md
 files/workbooks/~$values-calculator.xlsx
 files/workbooks/~$database-excel-macro.xlsm
+files/workbooks/~$values-calculator v2.xlsx
+files/workbooks/~$sleeper-worksheet.xlsm
