--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ files/workbooks/~$values-calculator.xlsx
 files/workbooks/~$database-excel-macro.xlsm
 files/workbooks/~$values-calculator v2.xlsx
 files/workbooks/~$sleeper-worksheet.xlsm
+files/workbooks/~$fpscrape explorer.xlsx
