update ecr hist data

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ files/workbooks/~$database-excel-macro.xlsm
 files/workbooks/~$values-calculator v2.xlsx
 files/workbooks/~$sleeper-worksheet.xlsm
 files/workbooks/~$fpscrape explorer.xlsx
+files/workbooks/~$personal-rankings.xlsx
