etgts based on adot and snaps

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ files/workbooks/~$values-calculator v2.xlsx
 files/workbooks/~$sleeper-worksheet.xlsm
 files/workbooks/~$fpscrape explorer.xlsx
 files/workbooks/~$personal-rankings.xlsx
+files/workbooks/~$eTGTs based on ADOT and snaps.xlsx
