--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ files/workbooks/~$sleeper-worksheet.xlsm
 files/workbooks/~$fpscrape explorer.xlsx
 files/workbooks/~$personal-rankings.xlsx
 files/workbooks/~$eTGTs based on ADOT and snaps.xlsx
+.Rproj.user
