--- a/.github/workflows/weekly-playervalues.yml
+++ b/.github/workflows/weekly-playervalues.yml
@@ -7,7 +7,7 @@ name: weekly-playervalues
 
 jobs:
   weekly-playervalues:
-    runs-on: ubuntu-22.04
+    runs-on: macOS-latest
     env:
       RSPM: https://packagemanager.rstudio.com/cran/__linux__/jammy/latest
       GITHUB_PAT: ${{ secrets.GH_PAT }}
