--- a/.github/workflows/daily_fpweekecr.yml
+++ b/.github/workflows/daily_fpweekecr.yml
@@ -1,6 +1,6 @@
 on:
-  #schedule:
-  #  - cron: 3 */12 * * *
+  schedule:
+    - cron: 3 */12 * * *
   workflow_dispatch:
 
 name: daily-fantasypros
@@ -26,7 +26,7 @@ jobs:
           path: public
 
       - name: Install R
-        uses: r-lib/actions/setup-r@v1
+        uses: r-lib/actions/setup-r@v2
         id: install-r
 
       - name: Install pak and query dependencies
