--- a/.github/workflows/weekly-playervalues.yml
+++ b/.github/workflows/weekly-playervalues.yml
@@ -29,11 +29,11 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         id: install-r
 
-      - name: Install pak and query dependencies
-        uses: r-lib/actions/setup-r-dependencies@v2
+      - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-            cache-version: 2
-            working-directory: ./private
+          cache-version: 1
+          working-directory: ./private
+          extra-packages: ffverse/ffscrapr
       
       - name: Build Values
         working-directory: ./private
